--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div class=" page-header-conteiner conteiner">
         <nav class="nav">
-            <a class="logo link" href="#">Web<span class="logo-part">Studio</span></a>
+            <a class="logo logo-header link" href="#">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-menu list">
                 <li class="nav-item"><a class="nav-link link" href="./index.html">Studio</a></li>
                 <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
@@ -130,9 +130,10 @@
 
     <footer class="footer">
         <div class="conteiner">
+        <div class="footer-box">
         <a class="logo link" href="#">Web<span class="logo-footer">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
-
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
         </div>
     </footer>
 </body>
